--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 --- #YAML:1.0
 name:                FCGI-IIS
-version:             0.03
+version:             0.04
 abstract:            FCGI wrapper for MS IIS FastCGI
 license:             ~
 generated_by:        ExtUtils::MakeMaker version 6.3201
 distribution_type:   module
 requires:     
+    FCGI:                          0
 meta-spec:
     url:     http://module-build.sourceforge.net/META-spec-v1.2.html
     version: 1.2
